--- a/Schule.html
+++ b/Schule.html
@@ -8,7 +8,7 @@
 
 <h1> Meine Schullaufbahn:</h1>
 
-<a href="Hauptseite.html"> Zurück</a>
+<a href="index.html"> Zurück</a>
 
 <p>   <img src="Bilder/Brgfoto.jfif" alt="Brg-Foto">     </p>
 
