--- a/Friends.html
+++ b/Friends.html
@@ -17,7 +17,7 @@
     <img src="Bilder/Ross.jpg"  alt="Ross Geller" width="285" border="10">
     <img src="Bilder/Rachel.jpg"  alt="Rachel Green" width="300" border="10">
 
-    <p> <a href="Startseite_über mich.html"> Zurück</a></p>
+    <p> <a href="index.html"> Zurück</a></p>
     
 
 </body>
